--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<div class="card" style="background-image: url('./img/4.jpg')">
 					<div class="textos">
-						<a class="vinculo" href="https://www.facebook.com/"><h3>CUALQUIER COSA</h3></a>
+						<a class="vinculo" href="videoReceta.html"><h3>VIDEO RECETA</h3></a>
 						<p>cuarto articulo</p>
 					</div>
 				</div>
