--- a/videoReceta.html
+++ b/videoReceta.html
@@ -14,9 +14,7 @@
             </header>
 
             <div class="pannel2">
-                <video controls>
-                    <source src="video.mp4" type="video/mp4">
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/z9_1O_dCVOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             
         </div>    
